# rigol2wav

./: README.md  main.py  pyproject.toml
src/rigol2wav/: __init__.py  cli.py
